fixed the skill hover for small screens and fixed the navside

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="video-div">
-  <video src="images/video 2.mp4" autoplay muted loop></video>
+  <video src="images/video 1.mp4" autoplay muted loop></video>
 </div>
 
 <!-- start side nav  -->
@@ -58,15 +58,14 @@
   <div class="abuot-me">
     <h2>About Me:</h2>
     <p>I'm Emad Rashad Mohammed ,form Yemen, web designer and developer, I am a creative, artistic and ambitious web Design and develop with a talent for thinking outside the box and coming up with innovative ideas and designs. </p>
-    <a href="images/Bootstrap img.jpg" download><button>Download CV</button></a> 
+    <a href="/cv1.pdf" download><button>Download CV</button></a> 
   </div>
   <div class="con-img">
   <div class="small-img">
     <img src="images/2.png" alt="">
 
-
-    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 198 86.36"><defs><style>.cls-1{fill:#32f1c4;}.cls-2{fill:#fff;}</style></defs><path class="cls-1" d="M200,13.64V46.76l-.49.25c-6.64,3.28-13.21,7-20,9.67a257.91,257.91,0,0,1-25.82,8.84,185,185,0,0,1-61.21,6.1c-4-.24-7.92-.63-11.87-1C73.83,70,67,69.11,60.34,67.82A322,322,0,0,1,10.55,53.74C7.63,52.67,4.83,51.27,2,50h.83c1.67,0,3.82.75,5.55,1.08l6.17,1.19c4.12.77,8.24,1.52,12.37,2.21q12.27,2.07,24.62,3.42c18.27,2,36.6.53,54.85-1.74a164.53,164.53,0,0,0,16.46-3.26,170.23,170.23,0,0,0,17.52-5A174,174,0,0,0,163.09,38c7-3.6,14.28-7.24,20.63-11.9C189.2,22.08,194.58,17.81,200,13.64Z" transform="translate(-2 -13.64)"/><path class="cls-2" d="M200,47v53H2V50l1.11,0c2.81,1.29,5.6,2.69,8.5,3.76,5.84,2.19,11.68,4.34,17.61,6.14,4.61,1.41,9.3,2.22,14,3.43,1.91.49,3.82,1,5.73,1.58a175.33,175.33,0,0,0,32.4,5.73c7.46.7,15,1.38,22.42,1.38h1.69q7.88-.09,15.76-.72A170.86,170.86,0,0,0,154,65.52a256.34,256.34,0,0,0,25.68-8.84c6.73-2.71,13.26-6.39,19.86-9.67Z" transform="translate(-2 -13.64)"/></svg>
-
+<img id="Layer_1" src="images/rrr1-01.svg" alt="">
+  
   </div>
   <h1>Emad Rashad</h1>
   <p>Frontend Developer</p>
