--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </ul>
   </nav>
   <div class="s-m">
-    <a href="https://www.instagram.com/3mad_7/?r=nametag"><i class="fab fa-instagram-square"></i></a>
-    <a href="https://www.facebook.com/profile.php?id=100005185022147&sk=likes"><i class="fab fa-facebook-square"></i></a>
-    <a href="https://github.com/emad98r"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a target="_black"  href="https://www.instagram.com/3mad_7/?r=nametag"><i class="fab fa-instagram-square"></i></a>
+    <a target="_black"  href="https://www.facebook.com/profile.php?id=100005185022147&sk=likes"><i class="fab fa-facebook-square"></i></a>
+    <a target="_black"  href="https://github.com/emad98r"><i class="fab fa-github"></i></a>
+    <a target="_black"  href="https://www.linkedin.com/in/emad-rashad-9164041b6/"><i class="fab fa-linkedin"></i></a>
   </div>
 </div>
 
@@ -70,10 +70,10 @@
   <h1>Emad Rashad</h1>
   <p>Frontend Developer</p>
   <div class="s-m-2nd">
-    <a href="https://www.instagram.com/3mad_7/?r=nametag"><i class="fab fa-instagram-square"></i></a>
-    <a href="https://www.facebook.com/profile.php?id=100005185022147&sk=likes"><i class="fab fa-facebook-square"></i></a>
-    <a href="https://github.com/emad98r"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a target="_black"  href="https://www.instagram.com/3mad_7/?r=nametag"><i class="fab fa-instagram-square"></i></a>
+    <a target="_black"  href="https://www.facebook.com/profile.php?id=100005185022147&sk=likes"><i class="fab fa-facebook-square"></i></a>
+    <a target="_black"  href="https://github.com/emad98r"><i class="fab fa-github"></i></a>
+    <a target="_black" href="https://www.linkedin.com/in/emad-rashad-9164041b6/"><i class="fab fa-linkedin"></i></a>
   </div>
 </div>
 </div>
